Use polyglot sampler